fix layout overflow, style scroll bar and add animation to contact me button on Home page

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,4 +5,5 @@ body {
   font-family: "SpaceGrotesk";
   background-color: $mainBgColour;
   font-size: 62.5%;
+  overflow-x: hidden; /* Prevent horizontal scrollbar */
 }
