--- a/src/Pages/contact/components/ContactForm/ContactForm.scss
+++ b/src/Pages/contact/components/ContactForm/ContactForm.scss
@@ -123,13 +123,13 @@
         font-weight: 600;
         border-radius: 30px;
         cursor: pointer;
-        transition: 0.5s ease-in-out;
+        transition: background-color 0.5s ease-in-out, transform 0.5s ease-in-out;
         border: none; /* Remove default button border */
 
         /* Hover effect with transform animation */
         &:hover:not(:disabled){
             background-color: rgb(1, 147, 251);
-            transform: translateY(-2px); /* Subtle lift effect */
+            transform: scale(1.05); /* Subtle lift effect */
         }
 
         /* Disabled state styling */
